--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
   <body>
-    <header>
+    <header lass="header-primary">
       <div class="container">
         Header Content
       </div>
