--- a/index.html
+++ b/index.html
@@ -1,71 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>title</title>
-    <link rel="stylesheet" href="stylesheet.css" type="text/css">
-  </head>
-  <body>
-    <header class="header-primary">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>title</title>
+  <link rel="stylesheet" href="stylesheet.css" type="text/css">
+</head>
+
+<body>
+  <header class="header-primary">
+    <div class="container">
+      <a class="logo logo-primary">
+        <img src="images/logo.png">
+      </a>
+    </div>
+  </header>
+  <main>
+    <section>
       <div class="container">
-        Header Content
+        Hero Primary Content
       </div>
-    </header>
-    <main>
-      <section>
-        <div class="container">
-          Hero Primary Content
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <div class="row">
-              <div class="col-1-3 pull-right-sm">
-                  Circle Image
-              </div>
-              <div class="col-2-3">
-                  Content Area
-              </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-1-3 pull-right-sm">
+            Circle Image
+          </div>
+          <div class="col-2-3">
+            Content Area
           </div>
         </div>
-      </section>
-      <section>
-        <div class="container">
-          <div class="row">
-            <div class="col-1-3 remove-gutter-xs">
-              <div>
-                Feature Content
-              </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-1-3 remove-gutter-xs">
+            <div>
+              Feature Content
             </div>
-            <div class="col-1-3 remove-gutter-xs">
-              <div>
-                Feature Content
-              </div>
+          </div>
+          <div class="col-1-3 remove-gutter-xs">
+            <div>
+              Feature Content
             </div>
-            <div class="col-1-3 remove-gutter-xs">
-              <div>
-                Feature Content
-              </div>
+          </div>
+          <div class="col-1-3 remove-gutter-xs">
+            <div>
+              Feature Content
             </div>
           </div>
         </div>
-      </section>
-      <section>
-        <div class="container">
-          Testimonial Content
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          Media Objects
-        </div>
-      </section>
-    </main>
-    <footer>
-      <div class="container">
-        Footer Content
       </div>
-    </footer>
-  </body>
+    </section>
+    <section>
+      <div class="container">
+        Testimonial Content
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        Media Objects
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="container">
+      Footer Content
+    </div>
+  </footer>
+</body>
+
 </html>
