--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       <a class="logo logo-primary">
         <img src="images/logo.png">
       </a>
+      <nav class="nav nav-primary">
+        <ul>
+          <li class="btn btn-nav"><a href="#">Link</a></li>
+          <li class="btn btn-nav"><a href="#">Link</a></li>
+          <li class="btn btn-nav"><a href="#">Link</a></li>
+          <li class="btn btn-primary"><a href="#">Link</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
   <main>
