finsihed hero css properties

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </div>
   </header>
   <main>
-    <section>
+    <section class="hero hero-primary">
       <div class="container">
-        Hero Primary Content
+        <div class="hero-body"></div>
       </div>
     </section>
     <section>
