--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
   <main>
     <section class="hero hero-primary">
       <div class="container">
-        <div class="hero-body"></div>
+        <div class="hero-body">
+          <h1 class="hero-title"> Hero Primary Title</h1>
+          <h4 class="hero-subtitle">Hero Primary Subtitle Content</h4>
+          <button class="btn">Button Text</button>
+        </div>
       </div>
     </section>
     <section>
