--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </div>
   </header>
   <main>
-    <section class="hero hero-primary">
+    <section class="hero hero-primary bg-image">
+      <img src="./images/hero.jpg">
       <div class="container">
         <div class="hero-body">
           <h1 class="hero-title"> Hero Primary Title</h1>
